fixed password bugs and background not showing up

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -40,10 +40,17 @@ $gray-medium-light: #eaeaea;
 
 .join-team-teams {
   background-color: rgb(255, 255, 255);
-  padding: 15px;
+  padding: 10px;
   border-style: solid;
   border-width: .5px;
   border-radius: 5px 5px 5px 5px;
+  margin-bottom: 10px;
+}
+
+.join-team-team {
+  border-style: solid;
+  border-width: .5px 0px 0px 0px;
+  // border-radius: 5px;
 }
 
 /* login and sign up page */
@@ -102,6 +109,11 @@ $gray-medium-light: #eaeaea;
 }
 
 /* backgrounds */
+
+.userscreate {
+  background-image: image-url('login_sign_up.jpg');
+  background-size: cover; 
+}
 
 .usersnew {
   background-image: image-url('login_sign_up.jpg');
